# NeuroScalpel

./: .gitignore  README.md  main.py  requests.txt  web_main.py
LyapLock/lyaplock/: compute_z.py  lyaplock_main.py
LyapLock/rome/: compute_u.py  compute_v.py  layer_stats.py  layer_stats_ab_t.py
LyapLock/util/: globals.py
core/: __init__.py  auth_manager.py  edit_engine.py  generated_log.py  log_config.py  model_backend.py  model_introspection.py  nvidia_agent.py  pipeline_runner.py  point_and_layer_detect.py  session_manager.py  task_queue.py
core/Abliteration/: _home_mohamed_Desktop_Models_gpt-3.1-8B-Instruct_refusal_dir.pt  chat_ui.py  compute_refusal_dir.py  inference.py
cpp_version/: CMakeLists.txt  main.cpp
cpp_version/core/: model_backend.cpp  model_backend.h  point_and_layer_detect.cpp  point_and_layer_detect.h
cpp_version/ui/: MainWindow.cpp  MainWindow.h
cpp_version/ui/panels/: dashboard.cpp  dashboard.h  feature_extractor.cpp  feature_extractor.h  order_terminal.cpp  order_terminal.h
cpp_version/ui/visualizer/: point_cloud_3d.cpp  point_cloud_3d.h
docs/: paper.md
java_version/: pom.xml
logs/pipeline/: neuron_targeting.json
sessions/20260318_064004_d550f84e/: session.db
sessions/20260318_064338_a6dbda50/: session.db
sessions/20260318_065014_0e108fa3/: session.db
sessions/20260318_065609_315773ef/: session.db
sessions/20260324_054150_7e2b6de5/: session.db
sessions/20260324_060031_23c1d6cf/: session.db
sessions/20260324_060837_94d784a2/: session.db
sessions/20260324_085905_6fbaeba3/: session.db
tests/: test_pipeline_stability.py
ui/: login_window.py  main_window.py
web/: app.py
(+59 files in other folders)
